Fixed bug #32941 (Sending structured SOAP fault kills a php)